exports[`test renders correctly admin user who has no listed quizzes 1`] = `
<div>
  <h3>
    Select quiz
  </h3>
  <div
    className="quiz-list-container">
    <ul
      className="quiz-list">
      <li>
        No quizzes listed 
        <br />
         Have you selected a course?
      </li>
    </ul>
    <ul
      className="passed">
      
    </ul>
  </div>
  <a
    onClick={[Function]}
    style={Object {}}>
    <button
      className="create-quiz"
      onClick={[Function]}>
      Create Quiz
    </button>
  </a>
</div>
`;

exports[`test renders correctly admin user who has passed one of two quizzes 1`] = `
<div>
  <h3>
    Select quiz
  </h3>
  <div
    className="quiz-list-container">
    <ul
      className="quiz-list">
      <li
        className="listed-item"
        onClick={[Function]}>
        <div>
          example Quiz
        </div>
        <a
          onClick={[Function]}
          style={Object {}}>
          <button
            onClick={[Function]}>
            Edit
          </button>
        </a>
      </li>
      <li
        className="listed-item"
        onClick={[Function]}>
        <div>
          example Quiz 2
        </div>
        <a
          onClick={[Function]}
          style={Object {}}>
          <button
            onClick={[Function]}>
            Edit
          </button>
        </a>
      </li>
    </ul>
    <ul
      className="passed">
      <li>
        <svg
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24">
          <g>
            <path
              d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
          </g>
        </svg>
      </li>
      <li />
    </ul>
  </div>
  <a
    onClick={[Function]}
    style={Object {}}>
    <button
      className="create-quiz"
      onClick={[Function]}>
      Create Quiz
    </button>
  </a>
</div>
`;

exports[`test renders correctly admin user who has passed two of two quizzes 1`] = `
<div>
  <h3>
    Select quiz
  </h3>
  <div
    className="quiz-list-container">
    <ul
      className="quiz-list">
      <li
        className="listed-item"
        onClick={[Function]}>
        <div>
          example Quiz
        </div>
        <a
          onClick={[Function]}
          style={Object {}}>
          <button
            onClick={[Function]}>
            Edit
          </button>
        </a>
      </li>
      <li
        className="listed-item"
        onClick={[Function]}>
        <div>
          example Quiz 2
        </div>
        <a
          onClick={[Function]}
          style={Object {}}>
          <button
            onClick={[Function]}>
            Edit
          </button>
        </a>
      </li>
    </ul>
    <ul
      className="passed">
      <li>
        <svg
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24">
          <g>
            <path
              d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
          </g>
        </svg>
      </li>
      <li>
        <svg
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24">
          <g>
            <path
              d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
          </g>
        </svg>
      </li>
    </ul>
  </div>
  <a
    onClick={[Function]}
    style={Object {}}>
    <button
      className="create-quiz"
      onClick={[Function]}>
      Create Quiz
    </button>
  </a>
</div>
`;

exports[`test renders correctly admin user who has passed zero of two quizzes 1`] = `
<div>
  <h3>
    Select quiz
  </h3>
  <div
    className="quiz-list-container">
    <ul
      className="quiz-list">
      <li
        className="listed-item"
        onClick={[Function]}>
        <div>
          example Quiz
        </div>
        <a
          onClick={[Function]}
          style={Object {}}>
          <button
            onClick={[Function]}>
            Edit
          </button>
        </a>
      </li>
      <li
        className="listed-item"
        onClick={[Function]}>
        <div>
          example Quiz 2
        </div>
        <a
          onClick={[Function]}
          style={Object {}}>
          <button
            onClick={[Function]}>
            Edit
          </button>
        </a>
      </li>
    </ul>
    <ul
      className="passed">
      <li />
      <li />
    </ul>
  </div>
  <a
    onClick={[Function]}
    style={Object {}}>
    <button
      className="create-quiz"
      onClick={[Function]}>
      Create Quiz
    </button>
  </a>
</div>
`;

exports[`test renders correctly non admin user who has no listed quizzes 1`] = `
<div>
  <h3>
    Select quiz
  </h3>
  <div
    className="quiz-list-container">
    <ul
      className="quiz-list">
      <li>
        No quizzes listed 
        <br />
         Have you selected a course?
      </li>
    </ul>
    <ul
      className="passed">
      
    </ul>
  </div>
</div>
`;

exports[`test renders correctly non admin user who has passed one of two quizzes 1`] = `
<div>
  <h3>
    Select quiz
  </h3>
  <div
    className="quiz-list-container">
    <ul
      className="quiz-list">
      <li
        onClick={[Function]}>
        example Quiz
      </li>
      <li
        onClick={[Function]}>
        example Quiz 2
      </li>
    </ul>
    <ul
      className="passed">
      <li>
        <svg
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24">
          <g>
            <path
              d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
          </g>
        </svg>
      </li>
      <li />
    </ul>
  </div>
</div>
`;

exports[`test renders correctly non admin user who has passed two of two quizzes 1`] = `
<div>
  <h3>
    Select quiz
  </h3>
  <div
    className="quiz-list-container">
    <ul
      className="quiz-list">
      <li
        onClick={[Function]}>
        example Quiz
      </li>
      <li
        onClick={[Function]}>
        example Quiz 2
      </li>
    </ul>
    <ul
      className="passed">
      <li>
        <svg
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24">
          <g>
            <path
              d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
          </g>
        </svg>
      </li>
      <li>
        <svg
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24">
          <g>
            <path
              d="M9 16.17l-4.17-4.17-1.42 1.41 5.59 5.59 12-12-1.41-1.41z" />
          </g>
        </svg>
      </li>
    </ul>
  </div>
</div>
`;

exports[`test renders correctly non admin user who has passed zero of two quizzes 1`] = `
<div>
  <h3>
    Select quiz
  </h3>
  <div
    className="quiz-list-container">
    <ul
      className="quiz-list">
      <li
        onClick={[Function]}>
        example Quiz
      </li>
      <li
        onClick={[Function]}>
        example Quiz 2
      </li>
    </ul>
    <ul
      className="passed">
      <li />
      <li />
    </ul>
  </div>
</div>
`;
